<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu01"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_review"
            android:title="@string/menu_review" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_book" />
    </group>

    <item android:title="@string/menu02">
        <menu>
            <group
                android:id="@+id/menu02"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_setting" />
            </group>
        </menu>
    </item>

</menu>
