<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_review">

    <fragment
        android:id="@+id/nav_list"
        android:name="com.yunwoon.projectd.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_ListFragment_to_ListSecondFragment"
            app:destination="@id/nav_list_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_list_second"
        android:name="com.yunwoon.projectd.ui.list.ListSecondFragment"
        android:label="@string/list_second"
        tools:layout="@layout/fragment_list_second">
        <action
            android:id="@+id/action_ListSecondFragment_to_ListFragment"
            app:destination="@id/nav_list" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_review"
        android:name="com.yunwoon.projectd.ui.review.ReviewFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_review" >
        <action
            android:id="@+id/action_ReviewFragment_to_ReviewSecondFragment"
            app:destination="@id/nav_review_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_review_second"
        android:name="com.yunwoon.projectd.ui.list.ReviewSecondFragment"
        android:label="@string/review_second"
        tools:layout="@layout/fragment_review_second">
        <action
            android:id="@+id/action_ReviewSecondFragment_to_ReviewFragment"
            app:destination="@id/nav_review" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_book"
        android:name="com.yunwoon.projectd.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_book"
        tools:layout="@layout/fragment_slideshow" />

</navigation>