<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/movie_name"
            android:textSize="27sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_15"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/movie_name"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#7d7979"/>
    <RatingBar
        android:id="@+id/reviewRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:rating="0"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="평점을 입력해 주세요"
        android:textSize="17sp"/>
    <EditText
        android:id="@+id/userEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:paddingStart="10dp"
        android:maxLines="1"
        android:maxLength="7"
        android:background="@drawable/user_background"
        android:hint="@string/user_hint"/>
    <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:maxLength="100"
        android:gravity="top"
        android:background="@drawable/review_background"
        android:hint="@string/review_hint"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="end">
        <Button
            android:id="@+id/storeReviewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="저장"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#510266"
            android:background="@drawable/btn_background" />
        <Button
            android:id="@+id/cancelReviewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="취소"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#510266"
            android:background="@drawable/btn_background"
            android:layout_toRightOf="@id/storeReviewButton"/>
    </RelativeLayout>

</LinearLayout>